@@ -200,6 +200,7 @@ constexpr int CLOSE_FILE_INTERVAL = 0;
 		SET(proxy_peer_connections, true, nullptr),
 		SET(auto_sequential, true, &session_impl::update_auto_sequential),
 		SET(proxy_tracker_connections, true, nullptr),
+		SET(clear_resolver_cache_on_ip_change, false, nullptr),
 	}});
 
 	aux::array<int_setting_entry_t, settings_pack::num_int_settings> const int_settings
