@@ -1,3 +1,4 @@
+	* added clear_resolver_cache_on_ip_change setting for internal host name resolver
 	* make the file_status interface explicitly public types
 	* added resolver_cache_timeout setting for internal host name resolver
 	* make parse_magnet_uri take a string_view instead of std::string
